[tool.poetry]
name = "kohaku web-backend"
version = "0.1.0"
description = ""
authors = ["Niatsuna"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "0.78.0"}
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
